craeted signup comp

--- a/src/app/sign-up-page/sign-up-page.component.html
+++ b/src/app/sign-up-page/sign-up-page.component.html
@@ -1,1 +1,13 @@
-<p>sign-up-page works!</p>
+<div class="container">
+  <div class="image-div"></div>
+  <div class="form-div">
+    <div class="form">
+      <p class="top-p">Welcome to Lilies!</p>
+      <input id="inputbox" placeholder="Your First Name" />
+      <input id="inputbox" placeholder="Your Email address" />
+      <input id="inputbox" placeholder="Your Password" />
+      <button class="button">SIGNUP</button>
+      <p class="bottom-p">Already have an account. <a>LOGIN</a></p>
+    </div>
+  </div>
+</div>
