--- a/src/app/sign-up-page/sign-up-page.component.css
+++ b/src/app/sign-up-page/sign-up-page.component.css
@@ -12,7 +12,7 @@
 .image-div {
   width: 764px;
   height: 100%;
-  background: url(./signup-image.png);
+  background: url(./signup-image.svg);
   border-radius: 7px;
 }
 
@@ -45,8 +45,9 @@
   height: 71px;
   border-radius: 5px;
   border: 1px solid rgba(251, 221, 187, 0.51);
-  padding-top: 19px;
+  padding-top: 10px;
   padding-left: 25px;
+  padding-bottom: 10px;
   font-weight: 400;
   font-size: 14px;
   margin-top: 28px;
@@ -59,7 +60,7 @@
   align-items: center;
   padding: 15px 40px;
   gap: 10px;
-  width: 488px;
+  width: 100%;
   height: 60px;
   background: #00302e;
   border-radius: 5px;
