--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,13 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .container {
   width: 1440px;
   height: 900px;
   background: #ffffff;
   display: flex;
   flex-direction: row;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
 }
 .image-div {
   width: 764px;
