added side nav bar

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<app-side-nav></app-side-nav>
+<div class="container">
+  <app-side-nav class="left-side-nav"></app-side-nav>
+  <div class="right-side"></div>
+</div>
