--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,1 +1,20 @@
-<p>side-nav works!</p>
+<div class="conatiner">
+  <div class="logo-container">
+    <img src="../../assets/image/logo.svg" class="logo" />
+    Lilies
+  </div>
+  <div class="nav-links">
+    <div class="link">
+      <img src="../../assets/image/home-icon.png" alt="logo" />Dashboard
+    </div>
+    <div class="link">
+      <img src="../../assets/image/account-icon.png" alt="logo" />Your Profile
+    </div>
+    <div class="link">
+      <img src="../../assets/image/order-icon.png" alt="logo" />Orders
+    </div>
+    <div class="link">
+      <img src="../../assets/image/cart-icon.png" alt="logo" />Your Cart
+    </div>
+  </div>
+</div>
