--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -1,6 +1,7 @@
 .conatiner {
   /* background: #fbfbfb; */
   /* background-color: pink; */
+  background: #fbfbfb;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -12,10 +13,11 @@
   height: 58px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 10px;
   align-items: center;
   margin-top: 100px;
-  margin-left: 30px;
+  /* margin-left: 10px; */
   /* margin: 80px 0px 112px 25px; */
   font-weight: 700;
   font-size: 33px;
@@ -35,13 +37,14 @@
   font-size: 16px;
   border-radius: 12px;
 
-  width: 90%;
+  width: 100%;
   height: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
-  justify-content: flex-start;
+  /* left: 10px; */
+  /* justify-content: start; */
   /* padding-left: 10px; */
   color: #707070;
 }
