--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,10 +1,38 @@
 .container {
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh; */
+  /* width: 100vw; */
   display: flex;
   flex-direction: row;
+  gap: 68px;
 }
 .left-side-nav {
-  width: 15vw;
-  height: 100vh;
+  width: 20%;
+  height: 100%;
+}
+.right-side {
+  width: 80%;
+  height: 100%;
+  /* background-color: antiquewhite; */
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 70px;
+  margin-top: 100px;
+}
+.header-upper {
+  font-size: 23px;
+  line-height: 33px;
+  color: #00302e;
+}
+.header-lower {
+  font-size: 14px;
+  line-height: 33px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.69);
+}
+.header-image {
+  margin-left: 71px;
 }
