--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,17 @@
 <div class="container">
   <app-side-nav class="left-side-nav"></app-side-nav>
-  <div class="right-side"></div>
+  <div class="right-side">
+    <div class="header">
+      <div class="header-content">
+        <div class="header-upper">Good morning, Oghenevwede!</div>
+        <div class="header-lower">
+          What delicious meal are you craving today?
+        </div>
+      </div>
+      <div class="header-image">
+        <img src="../../assets/image/dashboard-user-image.svg" />
+      </div>
+    </div>
+    <div class="food-items"></div>
+  </div>
 </div>
