added dash-food-item to dashboard and seted CSS

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,6 +12,15 @@
         <img src="../../assets/image/dashboard-user-image.svg" />
       </div>
     </div>
-    <div class="food-items"></div>
+    <div class="food-items">
+      <app-dash-food-item></app-dash-food-item>
+      <app-dash-food-item></app-dash-food-item>
+      <app-dash-food-item></app-dash-food-item>
+      <app-dash-food-item></app-dash-food-item>
+      <app-dash-food-item></app-dash-food-item>
+      <app-dash-food-item></app-dash-food-item>
+      <app-dash-food-item></app-dash-food-item>
+      <app-dash-food-item></app-dash-food-item>
+    </div>
   </div>
 </div>
