--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -20,7 +20,8 @@
   align-items: center;
   justify-content: space-between;
   padding-right: 70px;
-  margin-top: 100px;
+  margin-top: 90px;
+  margin-bottom: 40px;
 }
 .header-upper {
   font-size: 23px;
@@ -35,4 +36,10 @@
 }
 .header-image {
   margin-left: 71px;
+}
+.food-items {
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: ; */
+  gap: 80px;
 }
