--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,3 +1,4 @@
+<!-- <div class="navbar"> -->
 <div class="conatiner">
   <div class="logo-container">
     <img src="../../assets/image/logo.svg" class="logo" />
@@ -18,3 +19,4 @@
     </div>
   </div>
 </div>
+<!-- </div> -->
