--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -40,7 +40,7 @@
   /* background-color: aquamarine; */
   font-size: 16px;
   border-radius: 12px;
-
+  cursor: pointer;
   width: 100%;
   height: 50px;
   display: flex;
