--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-side-nav class="left-side-nav"></app-side-nav>
+  <app-side-nav></app-side-nav>
   <div class="right-side">
     <div class="header">
       <div class="header-content">
