--- a/src/app/sign-up-page/sign-up-page.component.html
+++ b/src/app/sign-up-page/sign-up-page.component.html
@@ -3,9 +3,11 @@
   <div class="form-div">
     <div class="form">
       <p class="top-p">Welcome to Lilies!</p>
-      <input id="inputbox" type="text" placeholder="Your First Name" />
-      <input id="inputbox" type="text" placeholder="Your Email address" />
-      <input id="inputbox" type="text" placeholder="Your Password" />
+      <div class="input-boxes">
+        <input id="inputbox" type="text" placeholder="Your First Name" />
+        <input id="inputbox" type="text" placeholder="Your Email address" />
+        <input id="inputbox" type="text" placeholder="Your Password" />
+      </div>
       <button class="button">SIGNUP</button>
       <p class="bottom-p">Already have an account. <a>LOGIN</a></p>
     </div>
