--- a/src/app/food-item-detail/food-item-detail.component.html
+++ b/src/app/food-item-detail/food-item-detail.component.html
@@ -1,7 +1,11 @@
 <div class="container">
-  <img src="../../assets/image/dash-food-item-image.png" />
+  <img src="../../assets/image/dash-food-item-image.png" class="image" />
   <p class="name">Stir Fry Pasta</p>
-  <p class="description">The in-house pasta and chicken by chef Moose</p>
+  <p class="description">
+    The in-house pasta and chicken by chef MooseThe in-house pasta and chicken
+    by chef Moose The in-house pasta and chicken by chef MooseThe in-house pasta
+    and chicken by chef Moose
+  </p>
   <div class="item-info">
     <div class="price">N 1,000.00</div>
     <div class="time">10-20</div>
