created checkout component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-food-item-detail></app-food-item-detail>
+<!-- <app-food-item-detail></app-food-item-detail> -->
+<app-checkout></app-checkout>
 <router-outlet></router-outlet>
