created cart component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-food-item-detail></app-food-item-detail> -->
-<app-checkout></app-checkout>
+<!-- <app-checkout></app-checkout> -->
+<app-cart></app-cart>
 <router-outlet></router-outlet>
