--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,23 @@
-<p>cart works!</p>
+<div class="container">
+  <div class="conatiner-items">
+    <p class="name">Your Cart</p>
+    <div class="item-details">
+      <div class="item">Item</div>
+      <div class="right-side-items">
+        <div class="qty">Qty</div>
+        <div class="price">Unit Price</div>
+        <div class="sub-total">Sub-total</div>
+      </div>
+    </div>
+    <!-- cart items -->
+    <app-cart-items></app-cart-items>
+    <app-cart-items></app-cart-items>
+    <app-cart-items></app-cart-items>
+    <app-cart-items></app-cart-items>
+    <div class="final-total">
+      <div class="total">Total:</div>
+      <div class="total-price">N 30,000.00</div>
+    </div>
+    <button class="button">Checkout</button>
+  </div>
+</div>
