added HTML and CSS to cart item component

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -10,10 +10,12 @@
       </div>
     </div>
     <!-- cart items -->
-    <app-cart-items></app-cart-items>
-    <app-cart-items></app-cart-items>
-    <app-cart-items></app-cart-items>
-    <app-cart-items></app-cart-items>
+    <div class="cart-items">
+      <app-cart-items></app-cart-items>
+      <app-cart-items></app-cart-items>
+      <!-- <app-cart-items></app-cart-items> -->
+      <!-- <app-cart-items></app-cart-items> -->
+    </div>
     <div class="final-total">
       <div class="total">Total:</div>
       <div class="total-price">N 30,000.00</div>
