--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 53vw;
   padding: 40px 30px 0px 30px;
-  background: pink;
+  /* background: pink; */
 }
 .conatiner-items {
   display: flex;
@@ -34,7 +34,15 @@
   align-items: center;
   color: rgba(0, 0, 0, 0.69);
 }
+
+.cart-items {
+  width: 100%;
+  /* padding: 0px; */
+  /* margin: 0; */
+}
+
 .right-side-items {
+  margin-right: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -73,6 +81,7 @@
   color: #00302e;
 }
 .button {
+  border: none;
   margin-top: 40px;
   width: 63%;
   height: 60px;
