--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,1 +1,15 @@
-<p>order works!</p>
+<div class="container">
+  <div class="conatiner-items">
+    <p class="name">Your Orders</p>
+    <div class="item-details">
+      <div class="item">Item</div>
+      <div class="right-side-items">
+        <div class="qty">Qty</div>
+        <div class="price">Price</div>
+        <div class="status">Status</div>
+      </div>
+    </div>
+    <!-- order items -->
+    <div class="order-items"></div>
+  </div>
+</div>
