added HTML and CSS to order item component

--- a/src/app/order/order-item/order-item.component.html
+++ b/src/app/order/order-item/order-item.component.html
@@ -1,1 +1,16 @@
-<p>order-item works!</p>
+<div class="container">
+  <div class="content">
+    <div class="left-side-items">
+      <img class="image" src="../../../assets/image/dash-food-item-image.png" />
+      <div class="item-info">
+        <div class="upper-p">Stir Fry Pasta</div>
+        <div class="lower-p">Remove</div>
+      </div>
+    </div>
+    <div class="right-side-items">
+      <div class="qty">3</div>
+      <div class="price">N 1,000.00</div>
+      <div class="status">Delivered</div>
+    </div>
+  </div>
+</div>
