--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -10,6 +10,9 @@
       </div>
     </div>
     <!-- order items -->
-    <div class="order-items"></div>
+    <div class="order-items">
+      <app-order-item></app-order-item>
+      <app-order-item></app-order-item>
+    </div>
   </div>
 </div>
