created cart model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-food-item-detail></app-food-item-detail> -->
 <!-- <app-checkout></app-checkout> -->
-<app-cart></app-cart>
+<!-- <app-cart></app-cart> -->
 <!-- <app-order></app-order> -->
 <router-outlet></router-outlet>
