added cart and order icon to nav bar

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -6,16 +6,32 @@
   </div>
   <div class="nav-links">
     <div class="link">
-      <img src="../../assets/image/home-icon.png" alt="logo" />Dashboard
+      <div class="left-div">
+        <img src="../../assets/image/home-icon.png" alt="logo" />
+        <div class="content">Dashboard</div>
+      </div>
+      <div></div>
     </div>
     <div class="link">
-      <img src="../../assets/image/account-icon.png" alt="logo" />Your Profile
+      <div class="left-div">
+        <img src="../../assets/image/account-icon.png" alt="logo" />
+        <div class="content">Your Profile</div>
+      </div>
+      <div></div>
     </div>
     <div class="link">
-      <img src="../../assets/image/order-icon.png" alt="logo" />Orders
+      <div class="left-div">
+        <img src="../../assets/image/order-icon.png" alt="logo" />
+        <div class="content">Orders</div>
+      </div>
+      <div class="right-div-order">0</div>
     </div>
     <div class="link">
-      <img src="../../assets/image/cart-icon.png" alt="logo" />Your Cart
+      <div class="left-div">
+        <img src="../../assets/image/cart-icon.png" alt="logo" />
+        <div class="content">Your Cart</div>
+      </div>
+      <div class="right-div-cart">0</div>
     </div>
   </div>
 </div>
