--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -39,14 +39,15 @@
   height: 67px;
 }
 .nav-links {
+  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 20px;
 }
-.link {
-  /* background-color: aquamarine; */
-  font-size: 16px;
+/*.link {
+  background-color: aquamarine;
+  /* /* font-size: 16px;
   border-radius: 12px;
   cursor: pointer;
   width: 100%;
@@ -56,7 +57,60 @@
   align-items: center;
   gap: 10px;
   /* left: 10px; */
-  /* justify-content: start; */
-  /* padding-left: 10px; */
-  color: #707070;
+/* justify-content: start; */
+/* padding-left: 10px; */
+/* color: #707070; */
+/* } */
+.link {
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%;
+  /* width: 267px; */
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  cursor: pointer;
+}
+.link:hover {
+  width: 100%;
+  background: #efefef;
+  border-radius: 12px;
+}
+.left-div {
+  display: flex;
+  flex-direction: row;
+  /* align-items: flex-starst; */
+  /* justify-content: space-between; */
+  gap: 20px;
+}
+.right-div-order {
+  width: 24px;
+  height: 24px;
+  background: #06e775;
+  border: 1px solid #06e775;
+  border-radius: 5px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.right-div-cart {
+  width: 24px;
+  height: 24px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f3c294;
+  border: 1px solid #f3c294;
+  border-radius: 5px;
 }
