--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -31,7 +31,7 @@
         <img src="../../assets/image/cart-icon.png" alt="logo" />
         <div class="content">Your Cart</div>
       </div>
-      <div class="right-div-cart">0</div>
+      <div class="right-div-cart">{{ cartSize }}</div>
     </div>
   </div>
 </div>
