created order services and used it

--- a/src/app/order/order-item/order-item.component.html
+++ b/src/app/order/order-item/order-item.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="content">
     <div class="left-side-items">
-      <img class="image" src="../../../assets/image/dash-food-item-image.png" />
+      <img class="image" src="{{ order.imgPath }}" />
       <div class="item-info">
-        <div class="upper-p">Stir Fry Pasta</div>
+        <div class="upper-p">{{ order.name }}</div>
         <div class="lower-p">Remove</div>
       </div>
     </div>
     <div class="right-side-items">
-      <div class="qty">3</div>
-      <div class="price">N 1,000.00</div>
-      <div class="status">Delivered</div>
+      <div class="qty">{{ order.quantity }}</div>
+      <div class="price">Rs.{{ order.price }}</div>
+      <div class="status">{{ order.status }}</div>
     </div>
   </div>
 </div>
