used order service in side bar

--- a/src/app/dashboard/dash-food-item/dash-food-item.component.html
+++ b/src/app/dashboard/dash-food-item/dash-food-item.component.html
@@ -7,7 +7,7 @@
     <div class="lower-para">{{ foodItem.description }}</div>
   </div>
   <div class="price-comp">
-    <div class="price">{{ foodItem.price }}</div>
+    <div class="price">Rs.{{ foodItem.price }}</div>
     <button class="add-to-cart">Add to cart</button>
   </div>
 </div>
