--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -24,7 +24,7 @@
         <img src="../../assets/image/order-icon.png" alt="logo" />
         <div class="content">Orders</div>
       </div>
-      <div class="right-div-order">0</div>
+      <div class="right-div-order">{{ orderSize }}</div>
     </div>
     <div class="link">
       <div class="left-div">
