--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="final-total">
       <div class="total">Total:</div>
-      <div class="total-price">N 30,000.00</div>
+      <div class="total-price">Rs.30000</div>
     </div>
     <button class="button">Checkout</button>
   </div>
