--- a/src/app/food-item-detail/food-item-detail.component.html
+++ b/src/app/food-item-detail/food-item-detail.component.html
@@ -7,7 +7,7 @@
     and chicken by chef Moose
   </p>
   <div class="item-info">
-    <div class="price">N 1,000.00</div>
+    <div class="price">Rs.1000</div>
     <div class="time">10-20</div>
     <div class="avialable">10 Pcs Avail</div>
   </div>
