adding rendering to side nav for cart and order

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -19,14 +19,14 @@
       </div>
       <div></div>
     </div>
-    <div class="link">
+    <div class="link" (click)="displayOrders()">
       <div class="left-div">
         <img src="../../assets/image/order-icon.png" alt="logo" />
         <div class="content">Orders</div>
       </div>
       <div class="right-div-order">{{ orderSize }}</div>
     </div>
-    <div class="link">
+    <div class="link" (click)="displayCart()">
       <div class="left-div">
         <img src="../../assets/image/cart-icon.png" alt="logo" />
         <div class="content">Your Cart</div>
