added navigation to cat, order and addtocart

--- a/src/app/dashboard/dash-food-item/dash-food-item.component.html
+++ b/src/app/dashboard/dash-food-item/dash-food-item.component.html
@@ -8,6 +8,6 @@
   </div>
   <div class="price-comp">
     <div class="price">Rs.{{ foodItem.price }}</div>
-    <button class="add-to-cart">Add to cart</button>
+    <button class="add-to-cart" (click)="addToCart()">Add to cart</button>
   </div>
 </div>
