--- a/src/app/order/order-item/order-item.component.html
+++ b/src/app/order/order-item/order-item.component.html
@@ -4,7 +4,7 @@
       <img class="image" src="{{ order.imgPath }}" />
       <div class="item-info">
         <div class="upper-p">{{ order.name }}</div>
-        <div class="lower-p">Remove</div>
+        <div class="lower-p">Details</div>
       </div>
     </div>
     <div class="right-side-items">
