--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,10 +1,19 @@
 .container {
-  height: 100vh;
-  width: 53vw;
-  padding: 40px 30px 0px 30px;
-  /* background: pink; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-.conatiner-items {
+.conatiner-left {
+  height: 100%;
+  width: 47%;
+  /* background: rgba(196, 196, 196, 0.42); */
+}
+.conatiner-right {
+  height: 100%;
+  width: 53%;
+}
+.conatiner-right-items {
   display: flex;
   flex-direction: column;
   align-items: center;
