--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,27 +1,30 @@
 <div class="container">
-  <div class="conatiner-items">
-    <p class="name">Your Cart</p>
-    <div class="item-details">
-      <div class="item">Item</div>
-      <div class="right-side-items">
-        <div class="qty">Qty</div>
-        <div class="price">Unit Price</div>
-        <div class="sub-total">Sub-total</div>
+  <div class="conatiner-left"></div>
+  <div class="conatiner-right">
+    <div class="conatiner-right-items">
+      <p class="name">Your Cart</p>
+      <div class="item-details">
+        <div class="item">Item</div>
+        <div class="right-side-items">
+          <div class="qty">Qty</div>
+          <div class="price">Unit Price</div>
+          <div class="sub-total">Sub-total</div>
+        </div>
       </div>
+      <!-- cart items -->
+      <div class="cart-items">
+        <app-cart-items
+          *ngFor="let cartItem of cartItems; let i = index"
+          [cartItem]="cartItem"
+          [id]="i"
+        >
+        </app-cart-items>
+      </div>
+      <div class="final-total">
+        <div class="total">Total:</div>
+        <div class="total-price">Rs.30000</div>
+      </div>
+      <button class="button">Checkout</button>
     </div>
-    <!-- cart items -->
-    <div class="cart-items">
-      <app-cart-items
-        *ngFor="let cartItem of cartItems; let i = index"
-        [cartItem]="cartItem"
-        [id]="i"
-      >
-      </app-cart-items>
-    </div>
-    <div class="final-total">
-      <div class="total">Total:</div>
-      <div class="total-price">Rs.30000</div>
-    </div>
-    <button class="button">Checkout</button>
   </div>
 </div>
