added styles to food item detail and checkout comp

--- a/src/app/food-item-detail/food-item-detail.component.html
+++ b/src/app/food-item-detail/food-item-detail.component.html
@@ -1,22 +1,27 @@
 <div class="container">
-  <img src="../../assets/image/dash-food-item-image.png" class="image" />
-  <p class="name">Stir Fry Pasta</p>
-  <p class="description">
-    The in-house pasta and chicken by chef MooseThe in-house pasta and chicken
-    by chef Moose The in-house pasta and chicken by chef MooseThe in-house pasta
-    and chicken by chef Moose
-  </p>
-  <div class="item-info">
-    <div class="price">Rs.1000</div>
-    <div class="time">10-20</div>
-    <div class="avialable">10 Pcs Avail</div>
-  </div>
-  <div class="buttons">
-    <div class="quantity-buttons">
-      <button class="decrease">-</button>
-      <p class="quantity">3</p>
-      <button class="increase">+</button>
+  <div class="conatiner-left"></div>
+  <div class="conatiner-right">
+    <div class="conatiner-right-items">
+      <img src="../../assets/image/dash-food-item-image.png" class="image" />
+      <p class="name">Stir Fry Pasta</p>
+      <p class="description">
+        The in-house pasta and chicken by chef MooseThe in-house pasta and
+        chicken by chef Moose The in-house pasta and chicken by chef MooseThe
+        in-house pasta and chicken by chef Moose
+      </p>
+      <div class="item-info">
+        <div class="price">Rs.1000</div>
+        <div class="time">10-20</div>
+        <div class="avialable">10 Pcs Avail</div>
+      </div>
+      <div class="buttons">
+        <div class="quantity-buttons">
+          <button class="decrease">-</button>
+          <p class="quantity">3</p>
+          <button class="increase">+</button>
+        </div>
+        <button class="add-to-cart-button">Add to cart</button>
+      </div>
     </div>
-    <button class="add-to-cart-button">Add to cart</button>
   </div>
 </div>
