--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -1,10 +1,19 @@
 .container {
-  height: 100vh;
-  width: 36vw;
-  /* background-color: pink; */
-  /* gap: 40px; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-.content {
+.conatiner-left {
+  height: 100%;
+  width: 64%;
+  /* background: rgba(196, 196, 196, 0.42); */
+}
+.conatiner-right {
+  height: 100%;
+  width: 36%;
+}
+.conatiner-right-items {
   padding: 80px 45px 50px 45px;
   margin-top: 20px;
   display: flex;
