--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,10 +1,13 @@
 <div class="container">
-  <div class="content">
-    <p class="name">Checkout</p>
-    <input type="text" class="input" placeholder="Card Number" />
-    <input type="text" class="input" placeholder="Exp Date" />
-    <input type="text" class="input" placeholder="CVV/CVV2" />
-    <input type="text" class="input" placeholder="Card Pin" />
-    <button class="button">Make Payment</button>
+  <div class="conatiner-left"></div>
+  <div class="conatiner-right">
+    <div class="conatiner-right-items">
+      <p class="name">Checkout</p>
+      <input type="text" class="input" placeholder="Card Number" />
+      <input type="text" class="input" placeholder="Exp Date" />
+      <input type="text" class="input" placeholder="CVV/CVV2" />
+      <input type="text" class="input" placeholder="Card Pin" />
+      <button class="button">Make Payment</button>
+    </div>
   </div>
 </div>
