--- a/src/app/food-item-detail/food-item-detail.component.css
+++ b/src/app/food-item-detail/food-item-detail.component.css
@@ -1,13 +1,34 @@
-.container {
+/* .container {
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   max-width: 36vw;
-  /* background: pink; */
+  background: pink;
   font-family: "Poppins";
-  /* padding: 80px 0px; */
+  padding: 80px 0px;
+}*/
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.conatiner-left {
+  height: 100%;
+  width: 64%;
+  /* background: rgba(196, 196, 196, 0.42); */
+}
+.conatiner-right {
+  height: 100%;
+  width: 36%;
+}
+.conatiner-right-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .image {
   margin-top: 40px;
