added routing for login and signup

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -5,8 +5,8 @@
       <p class="top-p">Welcome Back!</p>
       <input id="inputbox" type="text" placeholder="Your Email address" />
       <input id="inputbox" type="text" placeholder="Your Password" />
-      <button class="button">LOGIN</button>
-      <p class="bottom-p">Create an account</p>
+      <button class="button" (click)="toDashboardPage()">LOGIN</button>
+      <p class="bottom-p" (click)="toDashSignupPage()">Create an account</p>
     </div>
   </div>
 </div>
